--- a/PokeApp/Base.lproj/Main.storyboard
+++ b/PokeApp/Base.lproj/Main.storyboard
@@ -16,46 +16,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Pokemon ID: 6" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UE7-L0-Yhw">
-                                <rect key="frame" x="230" y="625" width="133" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Pokemon ID: 6" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UE7-L0-Yhw">
+                                <rect key="frame" x="224" y="625" width="133" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pokemon1" translatesAutoresizingMaskIntoConstraints="NO" id="KLg-gM-PcP">
+                                <rect key="frame" x="57" y="258" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="Oao-Ej-ISy"/>
+                                    <constraint firstAttribute="width" constant="300" id="hxb-yh-aQt"/>
+                                </constraints>
+                            </imageView>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="LYQ-VF-RjH">
+                                <rect key="frame" x="57" y="618" width="94" height="32"/>
+                                <connections>
+                                    <action selector="stepperTouched:" destination="BYZ-38-t0r" eventType="valueChanged" id="t1m-yl-Xez"/>
+                                </connections>
+                            </stepper>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHARIZARD" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="37i-vt-ly7">
-                                <rect key="frame" x="120" y="134" width="174" height="36"/>
+                                <rect key="frame" x="119.5" y="134" width="175" height="36"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zpo-wD-VtG">
-                                <rect key="frame" x="64" y="618" width="56" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="tintColor" systemColor="labelColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="gray" title="-" cornerStyle="large"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L6c-Bv-mcE">
-                                <rect key="frame" x="117" y="618" width="56" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="tintColor" systemColor="labelColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="gray" title="+" cornerStyle="large"/>
-                            </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pokemon1" translatesAutoresizingMaskIntoConstraints="NO" id="KLg-gM-PcP">
-                                <rect key="frame" x="61" y="258" width="302" height="300"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="37i-vt-ly7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="120" id="8YS-a2-zNy"/>
-                            <constraint firstItem="37i-vt-ly7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="90" id="hZK-aN-dOg"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="37i-vt-ly7" secondAttribute="trailing" constant="120" id="oWJ-iw-GfI"/>
+                            <constraint firstItem="KLg-gM-PcP" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="5c1-il-3al"/>
+                            <constraint firstItem="KLg-gM-PcP" firstAttribute="top" secondItem="37i-vt-ly7" secondAttribute="bottom" constant="88" id="BcC-CW-iqC"/>
+                            <constraint firstItem="37i-vt-ly7" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Bfa-B7-eQl"/>
+                            <constraint firstItem="UE7-L0-Yhw" firstAttribute="centerY" secondItem="LYQ-VF-RjH" secondAttribute="centerY" id="LL2-KT-CHF"/>
+                            <constraint firstItem="UE7-L0-Yhw" firstAttribute="trailing" secondItem="KLg-gM-PcP" secondAttribute="trailing" id="RU1-ob-iIP"/>
+                            <constraint firstItem="LYQ-VF-RjH" firstAttribute="top" secondItem="KLg-gM-PcP" secondAttribute="bottom" constant="60" id="YSj-nB-Xve"/>
+                            <constraint firstItem="37i-vt-ly7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="90" id="fgi-sr-IJV"/>
+                            <constraint firstItem="UE7-L0-Yhw" firstAttribute="leading" secondItem="LYQ-VF-RjH" secondAttribute="trailing" constant="73" id="hQk-3G-HL7"/>
+                            <constraint firstItem="LYQ-VF-RjH" firstAttribute="leading" secondItem="KLg-gM-PcP" secondAttribute="leading" id="o15-Xz-IF6"/>
+                            <constraint firstItem="UE7-L0-Yhw" firstAttribute="top" secondItem="KLg-gM-PcP" secondAttribute="bottom" constant="67" id="z9k-q3-TWs"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="idLabel" destination="UE7-L0-Yhw" id="rAH-VZ-anc"/>
+                        <outlet property="imageView" destination="KLg-gM-PcP" id="NWo-Bq-qAh"/>
+                        <outlet property="nameLabel" destination="37i-vt-ly7" id="VcG-AM-Bi9"/>
+                        <outlet property="stepperButton" destination="LYQ-VF-RjH" id="WRG-Eg-68Y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -69,42 +76,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Pokemon ID: 9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUe-Nx-vDu">
-                                <rect key="frame" x="227" y="630" width="133" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pokemon2" translatesAutoresizingMaskIntoConstraints="NO" id="xWp-Mm-0tv">
+                                <rect key="frame" x="57" y="258" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="2fJ-CC-ZHF"/>
+                                    <constraint firstAttribute="height" constant="300" id="VaW-o2-34G"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BLASTOISE" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uZc-MZ-U2L">
+                                <rect key="frame" x="126" y="134" width="162" height="36"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pokemon2" translatesAutoresizingMaskIntoConstraints="NO" id="xWp-Mm-0tv">
-                                <rect key="frame" x="62" y="265" width="301" height="300"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cSX-C9-HKJ">
-                                <rect key="frame" x="62" y="623" width="57" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="tintColor" systemColor="labelColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="gray" title="-"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WGl-OY-BUI">
-                                <rect key="frame" x="117" y="623" width="57" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="tintColor" systemColor="labelColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="gray" title="+"/>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="BLASTOISE" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uZc-MZ-U2L">
-                                <rect key="frame" x="131" y="139" width="162" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="tintColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="vqh-AL-10b">
+                                <rect key="frame" x="57" y="618" width="94" height="32"/>
+                            </stepper>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Pokemon ID: 9" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUe-Nx-vDu">
+                                <rect key="frame" x="224" y="622" width="133" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Rxq-6h-CKy"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vUe-Nx-vDu" firstAttribute="leading" secondItem="vqh-AL-10b" secondAttribute="trailing" constant="73" id="BBm-Zh-eKG"/>
+                            <constraint firstItem="uZc-MZ-U2L" firstAttribute="centerX" secondItem="Rxq-6h-CKy" secondAttribute="centerX" id="PwU-CZ-3ie"/>
+                            <constraint firstItem="xWp-Mm-0tv" firstAttribute="top" secondItem="uZc-MZ-U2L" secondAttribute="bottom" constant="88" id="RA5-CB-kgd"/>
+                            <constraint firstItem="vqh-AL-10b" firstAttribute="top" secondItem="xWp-Mm-0tv" secondAttribute="bottom" constant="60" id="ViT-Z5-mce"/>
+                            <constraint firstItem="uZc-MZ-U2L" firstAttribute="top" secondItem="Rxq-6h-CKy" secondAttribute="top" constant="90" id="buj-Kg-uqw"/>
+                            <constraint firstItem="vUe-Nx-vDu" firstAttribute="centerY" secondItem="vqh-AL-10b" secondAttribute="centerY" id="c9P-l8-fOs"/>
+                            <constraint firstItem="vqh-AL-10b" firstAttribute="leading" secondItem="xWp-Mm-0tv" secondAttribute="leading" id="d31-kc-aLc"/>
+                            <constraint firstItem="xWp-Mm-0tv" firstAttribute="centerX" secondItem="Rxq-6h-CKy" secondAttribute="centerX" id="l3x-rv-sJO"/>
+                            <constraint firstItem="vUe-Nx-vDu" firstAttribute="top" secondItem="xWp-Mm-0tv" secondAttribute="bottom" constant="67" id="nOu-Ab-5n9"/>
+                            <constraint firstItem="vUe-Nx-vDu" firstAttribute="centerY" secondItem="vqh-AL-10b" secondAttribute="centerY" id="ofS-ep-AAe"/>
+                            <constraint firstItem="vUe-Nx-vDu" firstAttribute="trailing" secondItem="xWp-Mm-0tv" secondAttribute="trailing" id="vWD-YV-ZRS"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SfX-S9-8gB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
